many visibility and ux fixes

--- a/client/src/components/room/message.css
+++ b/client/src/components/room/message.css
@@ -21,7 +21,6 @@
   position: relative;
   margin-left: 20px;
   margin-bottom: 10px;
-  padding: 1.25rem;
   background-color: #ffffff;
   width: 400px;
   height: fit-content;
@@ -30,62 +29,17 @@
   border: 1px solid #97C6E3;
   border-radius: 10px;
 }
-.other:after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 15px solid #ffffff;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  top: 0;
-  left: -15px;
-}
-.other:before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 17px solid #97C6E3;
-  border-left: 16px solid transparent;
-  border-right: 16px solid transparent;
-  top: -1px;
-  left: -17px;
-}
 .current {
   position: relative;
   margin-bottom: 10px;
   margin-left: calc(100% - 440px);
-  padding: 1.25rem;
-  background-color: #A8DDFD;
+  background-color: #dcf8c6;
   width: 400px;
   height: fit-content;
   text-align: left;
   font: 400 0.9em 'Open Sans', sans-serif;
-  border: 1px solid #839BFD;
+  border: 1px solid #cccccc;
   border-radius: 10px;
-}
-.current:after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-bottom: 15px solid #A8DDFD;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  bottom: 0;
-  right: -15px;
-}
-.current:before {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-bottom: 17px solid #839BFD;
-  border-left: 16px solid transparent;
-  border-right: 16px solid transparent;
-  bottom: -1px;
-  right: -17px;
 }
 .message-timestamp-other {
   position: absolute;
@@ -110,6 +64,12 @@
 .message-content {
   word-wrap: break-word;
 }
+.message {
+  padding: 1rem 0.5rem 0.5rem 1rem;
+}
+.message .date {
+  color: grey;
+}
 .room-list ul {
   list-style: none;
   padding: 0;
@@ -129,5 +89,9 @@
 }
 .room-list ul .users {
   font-weight: bold ;
+}
+#messageEnd {
+  margin-top: -10rem;
+  height: 50px;
 }
 /*# sourceMappingURL=message.css.map */
